--- a/src/app/components/forms/orders/orders-overview/orders-overview.component.html
+++ b/src/app/components/forms/orders/orders-overview/orders-overview.component.html
@@ -147,9 +147,8 @@
     <input
       routerLink="/orders/orderedConfectionery"
       type="button"
-      value="Изменить ингредиенты"
+      value="Изменить содержимое"
       (click)="setOrdersId(editedOrders)"
-      (click)="saveOrders()"
       class="btn btn-warning"
     />
   </td>
