--- a/src/app/components/forms/confectionery/confectionery-overview/confectionery-overview.component.html
+++ b/src/app/components/forms/confectionery/confectionery-overview/confectionery-overview.component.html
@@ -19,7 +19,7 @@
   class="table-responsive"
   style="max-width: 1100px; min-width: 1000px; height: 100%; overflow-x: auto"
 >
-  <table class="table table-striped" >
+  <table class="table table-striped">
     <thead>
       <tr>
         <td>Id</td>
@@ -78,10 +78,8 @@
     />
   </td>
   <td>
-    
     <div class="dropdown">
-      <button class="dropbtn">{{ chosenNameFS }}
-        </button>
+      <button class="dropbtn">{{ chosenNameFS }}</button>
       <div class="dropdown-content">
         <div *ngFor="let flowSheet of flowSheets">
           <ng-template
@@ -94,9 +92,10 @@
     </div>
     <!--шаблон для чтения-->
     <ng-template #dropTemplate let-flowSheet>
-      <a style="cursor: pointer;" (click)="chosenFlowSheet(flowSheet)">{{ flowSheet.confectioneryName }}</a>
+      <a style="cursor: pointer" (click)="chosenFlowSheet(flowSheet)">{{
+        flowSheet.confectioneryName
+      }}</a>
     </ng-template>
-    
   </td>
   <td>
     <input
